[gd_scene load_steps=19 format=2]

[ext_resource path="res://_Resources/icons2/image_part_069.png" type="Texture" id=1]
[ext_resource path="res://UI/Screens/ItemForge/ItemForge.gd" type="Script" id=2]
[ext_resource path="res://UI/SlottableInventory/SlottableInventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Screens/Screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://_Resources/font/BMYEONSUNG_ttf.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://_Resources/gui_images/UI board Small Set.png" type="Texture" id=6]
[ext_resource path="res://_Resources/Forge.png" type="Texture" id=7]
[ext_resource path="res://_Resources/gui_images/UI board Small  stone.png" type="Texture" id=8]
[ext_resource path="res://UI/SlottableInventory/ItemSelectionInventory/ItemSelectionInventory.tscn" type="PackedScene" id=9]
[ext_resource path="res://_Resources/gui_images/UI board Large  parchment.png" type="Texture" id=10]
[ext_resource path="res://_Resources/gui_images/DivisionLineVertical.png" type="Texture" id=11]
[ext_resource path="res://UI/SlottableInventory/ItemPreviewInventory/ItemPreviewInventory.tscn" type="PackedScene" id=12]
[ext_resource path="res://_Resources/gui_images/UI board Small  parchment.png" type="Texture" id=13]
[ext_resource path="res://UI/Slot/Slot.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 85
font_data = ExtResource( 5 )

[node name="ItemForge" instance=ExtResource( 4 )]
script = ExtResource( 2 )

[node name="LeftMargin" parent="VBoxContainer/Upper/VBoxContainer/Name" index="0"]
texture = ExtResource( 1 )

[node name="Label" parent="VBoxContainer/Upper/VBoxContainer/Name/TextureRect" index="0"]
text = "Item Forge"

[node name="RightMargin" parent="VBoxContainer/Upper/VBoxContainer/Name" index="2"]
texture = ExtResource( 1 )

[node name="Image" type="NinePatchRect" parent="VBoxContainer/Screen/VBoxContainer" index="0"]
margin_right = 1080.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
texture = ExtResource( 8 )
patch_margin_left = 35
patch_margin_top = 39
patch_margin_right = 38
patch_margin_bottom = 35

[node name="ForgeImage" type="TextureRect" parent="VBoxContainer/Screen/VBoxContainer/Image" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
texture = ExtResource( 7 )
expand = true

[node name="ItemCreation" type="HBoxContainer" parent="VBoxContainer/Screen/VBoxContainer/Image" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="ItemSelectionInventory" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemCreation" index="0" instance=ExtResource( 9 )]
margin_right = 537.0
margin_bottom = 460.0

[node name="ItemSelectionDimm" type="Panel" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemCreation/ItemSelectionInventory" index="2"]
visible = false
modulate = Color( 1, 1, 1, 0.619608 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemCreation" index="1"]
margin_left = 541.0
margin_right = 556.0
margin_bottom = 460.0
rect_min_size = Vector2( 15, 0 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="ItemInfoBackground" type="TextureRect" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemCreation" index="2"]
margin_left = 560.0
margin_right = 1040.0
margin_bottom = 460.0
rect_min_size = Vector2( 480, 0 )
size_flags_vertical = 5
texture = ExtResource( 10 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemCreation/ItemInfoBackground" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="ItemType" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemCreation/ItemInfoBackground/VBoxContainer" index="0"]
margin_right = 440.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 2
autowrap = true

[node name="ItemParts" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemCreation/ItemInfoBackground/VBoxContainer" index="1"]
margin_top = 141.0
margin_right = 440.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="ItemDescription" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemCreation/ItemInfoBackground/VBoxContainer" index="2"]
margin_top = 282.0
margin_right = 440.0
margin_bottom = 420.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="ItemUpgrade" type="HBoxContainer" parent="VBoxContainer/Screen/VBoxContainer/Image" index="2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="ItemPreviewInventory" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemUpgrade" index="0" instance=ExtResource( 12 )]
margin_right = 700.0
margin_bottom = 460.0
rect_min_size = Vector2( 700, 0 )
size_flags_horizontal = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemUpgrade" index="1"]
margin_left = 704.0
margin_right = 719.0
margin_bottom = 460.0
rect_min_size = Vector2( 15, 0 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemUpgrade" index="2"]
margin_left = 723.0
margin_right = 1040.0
margin_bottom = 460.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemUpgrade/VBoxContainer" index="0"]
margin_right = 317.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )

[node name="Left" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemUpgrade/VBoxContainer/HBoxContainer" index="0"]
margin_top = 118.0
margin_right = 29.0
margin_bottom = 132.0
size_flags_horizontal = 3

[node name="ItemSlot" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemUpgrade/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 14 )]
margin_left = 33.0
margin_right = 283.0
margin_bottom = 250.0
rect_min_size = Vector2( 250, 250 )
size_flags_vertical = 3
expand = true
upgrade = true

[node name="Right" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemUpgrade/VBoxContainer/HBoxContainer" index="2"]
margin_left = 287.0
margin_top = 118.0
margin_right = 317.0
margin_bottom = 132.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemUpgrade/VBoxContainer" index="1"]
margin_top = 254.0
margin_right = 317.0
margin_bottom = 454.0
rect_min_size = Vector2( 0, 200 )
texture = ExtResource( 13 )
expand = true

[node name="ItemName" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Image/ItemUpgrade/VBoxContainer/TextureRect" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Iron-oak Sword"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="SlottableInventory" parent="VBoxContainer/Screen/VBoxContainer" index="1" instance=ExtResource( 3 )]
margin_top = 504.0
margin_bottom = 1168.0
save_path = "user://item_forge.tscn"

[node name="PartsDimm" type="Panel" parent="VBoxContainer/Screen/VBoxContainer/SlottableInventory" index="2"]
visible = false
modulate = Color( 1, 1, 1, 0.619608 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/Screen/VBoxContainer" index="2"]
margin_top = 1172.0
margin_right = 1080.0
margin_bottom = 1392.0
rect_min_size = Vector2( 0, 220 )

[node name="ButtonLeft" type="TextureButton" parent="VBoxContainer/Screen/VBoxContainer/Buttons" index="0"]
margin_right = 538.0
margin_bottom = 220.0
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Buttons/ButtonLeft" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "New Item"
align = 1
valign = 1

[node name="ButtonRight" type="TextureButton" parent="VBoxContainer/Screen/VBoxContainer/Buttons" index="1"]
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 220.0
size_flags_horizontal = 3
texture_normal = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/Screen/VBoxContainer/Buttons/ButtonRight" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="BottomOffset" parent="VBoxContainer/Screen/VBoxContainer" index="3"]
margin_top = 1396.0
margin_bottom = 1616.0

[connection signal="pressed" from="VBoxContainer/Screen/VBoxContainer/Buttons/ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="VBoxContainer/Screen/VBoxContainer/Buttons/ButtonRight" to="." method="_on_ButtonRight_pressed"]
